# lofi-generator

./: Dockerfile  README.md  app.py  containers.json  first_output.mid  public-endpoint.json  pyproject.toml  requirements.txt  scripts.py
data/: notes
lofi_generator/: __main__.py  lstm.py  trainer.py
