[tool.poetry]
name = "lofi-generator"
version = "0.1.0"
description = ""
authors = ["Paul Luna <paulluna0215@gmail.com>"]
readme = "README.md"
packages = [{include = "lofi_generator"}]

[tool.poetry.dependencies]
python = ">=3.8,<=3.10.9"
numpy = "^1.24.2"
keras = "2.11.0"
music21 = "^8.1.0"
tensorflow-macos = "2.11.0"

[tool.poetry.scripts]
main = "scripts:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
